JumpScript/tests/baselines/reference/parserClassDeclaration3.errors.txt
tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration3.jump(1,20): error TS2304: Cannot find name 'A'.
tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration3.jump(1,22): error TS1173: 'extends' clause must precede 'implements' clause.
tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration3.jump(1,30): error TS2304: Cannot find name 'B'.


==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration3.jump (3 errors) ====
    class C implements A extends B {
                       ~
!!! error TS2304: Cannot find name 'A'.
                         ~~~~~~~
!!! error TS1173: 'extends' clause must precede 'implements' clause.
                                 ~
!!! error TS2304: Cannot find name 'B'.
    }